--- a/.gitmodules
+++ b/.gitmodules
@@ -85,3 +85,6 @@
 [submodule "bundle/vimwiki"]
 	path = bundle/vimwiki
 	url = https://github.com/vimwiki/vimwiki.git
+[submodule "bundle/spec.vim"]
+	path = bundle/spec.vim
+	url = https://github.com/vim-scripts/spec.vim.git
