--- a/.gitmodules
+++ b/.gitmodules
@@ -88,3 +88,6 @@
 [submodule "bundle/spec.vim"]
 	path = bundle/spec.vim
 	url = https://github.com/vim-scripts/spec.vim.git
+[submodule "bundle/html5-syntax.vim"]
+	path = bundle/html5-syntax.vim
+	url = https://github.com/othree/html5-syntax.vim.git
