--- a/.gitmodules
+++ b/.gitmodules
@@ -91,3 +91,6 @@
 [submodule "bundle/html5-syntax.vim"]
 	path = bundle/html5-syntax.vim
 	url = https://github.com/othree/html5-syntax.vim.git
+[submodule "bundle/jsdoc-syntax.vim"]
+	path = bundle/jsdoc-syntax.vim
+	url = https://github.com/othree/jsdoc-syntax.vim
