--- a/.gitmodules
+++ b/.gitmodules
@@ -97,3 +97,6 @@
 [submodule "bundle/vim-logrotate"]
 	path = bundle/vim-logrotate
 	url = https://github.com/moon-musick/vim-logrotate.git
+[submodule "bundle/indentLine"]
+	path = bundle/indentLine
+	url = https://github.com/Yggdroot/indentLine.git
