--- a/.gitmodules
+++ b/.gitmodules
@@ -118,3 +118,9 @@
 [submodule "bundle/zeavim"]
 	path = bundle/zeavim
 	url = https://github.com/KabbAmine/zeavim.vim.git
+[submodule "bundle/vim-notes"]
+	path = bundle/vim-notes
+	url = https://github.com/xolox/vim-notes.git
+[submodule "bundle/vim-misc"]
+	path = bundle/vim-misc
+	url = https://github.com/xolox/vim-misc.git
