--- a/.gitmodules
+++ b/.gitmodules
@@ -124,3 +124,6 @@
 [submodule "bundle/vim-misc"]
 	path = bundle/vim-misc
 	url = https://github.com/xolox/vim-misc.git
+[submodule "bundle/vim-projectlocal"]
+	path = bundle/vim-projectlocal
+	url = https://github.com/krisajenkins/vim-projectlocal.git
