--- a/.gitmodules
+++ b/.gitmodules
@@ -127,3 +127,6 @@
 [submodule "bundle/vim-projectlocal"]
 	path = bundle/vim-projectlocal
 	url = https://github.com/krisajenkins/vim-projectlocal.git
+[submodule "bundle/bootstrap-snippets"]
+	path = bundle/bootstrap-snippets
+	url = https://github.com/bonsaiben/bootstrap-snippets.git
