vison - plugin for json schema

--- a/.gitmodules
+++ b/.gitmodules
@@ -136,3 +136,6 @@
 [submodule "bundle/vdebug"]
 	path = bundle/vdebug
 	url = https://github.com/joonty/vdebug.git
+[submodule "bundle/vison"]
+	path = bundle/vison
+	url = https://github.com/Quramy/vison.git
