--- a/.gitmodules
+++ b/.gitmodules
@@ -139,6 +139,9 @@
 [submodule "bundle/vison"]
 	path = bundle/vison
 	url = https://github.com/Quramy/vison.git
+[submodule "vison/schema_store"]
+	path = vison/schema_store
+	url = https://github.com/SchemaStore/schemastore.git
 [submodule "bundle/characterize"]
 	path = bundle/characterize
 	url = https://github.com/tpope/vim-characterize
