--- a/.gitmodules
+++ b/.gitmodules
@@ -157,3 +157,6 @@
 [submodule "bundle/vim-dirdiff"]
 	path = bundle/vim-dirdiff
 	url = git://github.com/will133/vim-dirdiff
+[submodule "bundle/scratch.vim"]
+	path = bundle/scratch.vim
+	url = https://github.com/vim-scripts/scratch.vim.git
