--- a/UltiSnips/Dockerfile.snippets
+++ b/UltiSnips/Dockerfile.snippets
@@ -34,3 +34,8 @@ RUN curl -sS https://getcomposer.org/installer | php -- \
          --install-dir=/usr/local/bin
 ${0}
 endsnippet
+
+snippet healthcheck_curl "Healthcheck with curl" b
+HEALTHCHECK --interval=30s --timeout=15s CMD curl --fail ${1:http://localhost/} || exit 1
+$0
+endsnippet
