--- a/UltiSnips/Dockerfile.snippets
+++ b/UltiSnips/Dockerfile.snippets
@@ -46,7 +46,7 @@ ${0}
 endsnippet
 
 snippet healthcheckCurl "Healthcheck with curl" b
-HEALTHCHECK --interval=30s --timeout=15s CMD curl --fail ${1:http://localhost/} || exit 1
+HEALTHCHECK --interval=30s --timeout=15s --start-period=0 --retries=3 CMD curl --fail ${1:http://localhost/} || exit 1
 $0
 endsnippet
 
