Snippets for xdebug3

--- a/UltiSnips/Dockerfile.snippets
+++ b/UltiSnips/Dockerfile.snippets
@@ -85,6 +85,21 @@ RUN if [[ $WITH_XDEBUG = "true" ]]; then \
 $0
 endsnippet
 
+snippet xdebug3Install "Install xdebug3 PHP extension in official php debian image" b
+SHELL ["/bin/bash", "-o", "pipefail", "-c"]
+ARG WITH_XDEBUG=false
+RUN if [[ $WITH_XDEBUG = "true" ]]; then \
+    # Install xdebug (https://pecl.php.net/package/xdebug)
+    pecl install xdebug-${3.0.1} \
+    && docker-php-ext-enable xdebug \
+    && echo "xdebug.mode=develop,debug" >> /usr/local/etc/php/conf.d/docker-php-ext-xdebug.ini \
+    && echo "error_reporting = E_ALL" >> /usr/local/etc/php/conf.d/docker-php-ext-xdebug.ini \
+    && echo "display_startup_errors = On" >> /usr/local/etc/php/conf.d/docker-php-ext-xdebug.ini \
+    && echo "display_errors = On" >> /usr/local/etc/php/conf.d/docker-php-ext-xdebug.ini; \
+  fi
+$0
+endsnippet
+
 snippet rdkafkaPHP "Install rdkafka PHP extension" b
 # require librdkafka-dev package
 RUN pecl install rdkafka-4.0.3 && \
