--- a/UltiSnips/Dockerfile.snippets
+++ b/UltiSnips/Dockerfile.snippets
@@ -86,13 +86,20 @@ SHELL ["/bin/bash", "-o", "pipefail", "-c"]
 ARG WITH_XDEBUG=false
 RUN if [[ $WITH_XDEBUG = "true" ]]; then \
     # Install xdebug (https://pecl.php.net/package/xdebug)
-    pecl install xdebug-${1:3.0.1} \
+    pecl install xdebug-${1:3.2.0} \
     && docker-php-ext-enable xdebug \
     && echo "xdebug.mode=develop,debug" >> /usr/local/etc/php/conf.d/docker-php-ext-xdebug.ini \
     && echo "error_reporting = E_ALL" >> /usr/local/etc/php/conf.d/docker-php-ext-xdebug.ini \
     && echo "display_startup_errors = On" >> /usr/local/etc/php/conf.d/docker-php-ext-xdebug.ini \
     && echo "display_errors = On" >> /usr/local/etc/php/conf.d/docker-php-ext-xdebug.ini; \
   fi
+$0
+endsnippet
+
+snippet xdebug3InstallExt "Install xdebug3 PHP extension via php-extension-installer in official php image" b
+ARG WITH_XDEBUG=0
+COPY --from=mlocati/php-extension-installer /usr/bin/install-php-extensions /usr/local/bin/
+RUN test $WITH_XDEBUG -eq 1 && install-php-extensions xdebug-^3.2 || true
 $0
 endsnippet
 
@@ -141,7 +148,7 @@ endsnippet
 snippet phpExtensionInstaller "Install php-extension-installer, which simplify installing extensions in official PHP images" b
 # see https://github.com/mlocati/docker-php-extension-installer
 COPY --from=mlocati/php-extension-installer /usr/bin/install-php-extensions /usr/local/bin/
-RUN install-php-extensions ${1:xdebug-^3.1 @composer}
+RUN install-php-extensions ${1:xdebug-^3.2 @composer}
 $0
 endsnippet
 
